# Aula-DataScience-Trabalho2

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.ipynb
