[tool.poetry]
name = "aula-datascience-trabalho2"
version = "0.1.0"
description = "A project for Data Science classes."
authors = ["toledkrw <matheus.tererj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
autopep8 = "^2.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
